add css, some simple styling, simple total

--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 
 <head>
     <script type="module" src="main.js"></script>
-    <style>
-        html,
-        body {
-            margin: 0 !important;
-            padding: 0 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
